        - PropID.LINK renamed to PropID.SYM_LINK
        
    * Full RAR5 extraction support (format name: ArchiveFormat.RAR5)
        - password protected archives 
        - archives with encrypted headers
        - archives splitted in volumes
        - 251 new tests

    * Support for NTFS (file system)

    * Support for FAT (file system)

    * Support for SYM_LINK & HARD_LINK properties

    * Improving performance by using GCC 5.3 for Windows builds
    
    * Bugfix: Bug #18 (null as password causes JVM crash)

Release - 9.20-2.00beta (Release candidate, cross-platform, based on zip/p7zip 9.20 beta)

    * Bind 7-Zip 9.20 (beta)

    * Create/update archives
        - Supported archives: 7z, BZip2, Tar, Zip, GZip
        - Archive format specific or generic compression APIs
        - JavaDoc + Snippets
        
    * SHA1 hashes are used to verify cached binaries in the temp directory (before reusing) 

    * Performance boost on Linux (using -O2 optimization )

    * API changes
        - SevenZipException extends from IOException
        - Closeable interface added to IInArchive and IOutArchive
        - ISevenZipInArchive renamed to IInArchive

    * Bugfixes:
      - #17 WIM archive format contains Udf comment

    * SevenZip.getSevenZipVersion() and SevenZip.getSevenZipJBindingVersion() provide
      version information of the 7-Zip and 7-Zip-JBinding

    * Add compressed web site (website.zip) to the distribution

Release - 4.65-1.06-extr-only (extraction only, cross-platform, based on zip/p7zip 4.65)
    * Feature: WIM format support + tests

    * Feature: Initialization performance boost. Don't delete extracted native libraries
      in the temporary directory (specified by -Djava.io.tmpdir=<dir>) and use those later during
      subsequent 7-Zip-JBinding initializations.

    * Test: Test cross-platform encoding functionality
    
    * Bugfix: Get ride of the dependency to USER32.DLL improving performance and robustness
