@@ -1,6 +1,3 @@
-Release 2.01 TODOs:
-- Check stdlib version, try to downgrade.
-
 Other TODOs:
 - Prevent JVM from crash in OutOfMemory cases (see JavaStaticInfo.cpp)
 
